css/style.css
html{
	margin: 0;
}

body {
	margin: 0;
	background: rgb(59, 180, 119);
}

* {
	box-sizing: border-box;
}

section {
	visibility: hidden;
	opacity: 0;
	transition: visibility 0s, opacity 1s ease-in;
}

.loader {
	position: fixed;
	visibility: visible;
	opacity: 1;
	transition: visibility 0s, opacity 2s linear;
	z-index: 99999;
	width: 100%;
	height: 100%;
	background-color: lightgray;
}

.loader img {
	position: absolute;
	left: 50%;
	top: 50%;
	transform: translate(-50%, -50%);
	width: 50%;
	height: 50%;
	/*color: black;*/
}

header {
	position: fixed;
	left: 0;
	right: 0;
	top: -10%;
	z-index: 99;
	padding: 1em;
	background-color: rgba(0, 0, 0, 0.04);
	visibility: hidden;
	transition: background 1s ease-in-out;
}

header h1 {
	display: inline-block;
	margin: 0;
	color: #15db15;
}

.header-menu {
	float: right;
}

.header-menu a {
	line-height: 2em;
	padding: 0 0.5em;
	text-decoration: none;
	color: lightgray;
}

.landing-page {
	position: relative;
	top: 0;
	width: 100%;
	max-width: none;
	height: 100vh;
	background-image: linear-gradient(
      rgba(59, 180, 119, 0.3), 
      rgba(59, 180, 119, 0.4));
}

.landing-page h1 {
	position: absolute;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
	color: #d6bfbf;
	animation: title 1s ease-out;
	font-size: 3em;
	margin: 0;
	color: white;
}

.landing-page h2 {
	position: absolute;
	top: calc(50% + 2em);
	left: 50%;
	transform: translate(-50%, -50%);
	color: #d6bfbf;
	animation: title 1s ease-out;
	margin: 0;
	font-size: 1.5em;
	color: rgb(179, 191, 186);
}

.section {
	position: relative;
	max-width: calc(90vh / 0.6666666);
	width: 100%;
	height: auto;
	margin: auto;
	padding: 4em 0;
	overflow: hidden;
	opacity: 0;
	transition: opacity 1s ease-in-out;
}

.section .text-holder {
	position: absolute;
	padding: 1em 0.5em 0.5em 0.5em;
	background-color: rgb(24, 31, 28);
	border-radius: 5px;
}

.section h3 {
	position: absolute;
	margin: 0;
	padding: 0 0.75em;
	background-color: rgb(24, 31, 28);
	color: rgb(72, 178, 26);
	
}

.section p {
	position: relative;
	color: rgb(179, 191, 186);
	border: 3px solid rgb(72, 178, 26);
	padding: 1em 0.5em 0.5em 0.5em;
}

.section .image-holder {
	position: absolute;
	background-repeat: no-repeat;
	background-size: cover;
	background-position: center center;
	background-attachment: fixed;
}

.box-wrapper {
	position: relative;
	padding-top: 66.6666%;
}

/* ---- Section with div at the left ----- */
.section.left .text-holder {
	z-index: 3;
	top: 10%;
	left: 10%;
	width: 50%;
	height: auto;
}

.section.left h3 {
	z-index: 5;
	left: 50%;
	top: 0.3em;
	transform: translateX(-50%);
}

.section.left p {
	width: 100%;
	height: 100%;
	margin: 0;
}

.section.left .image-holder {
	right: 0;
	top: 20%;
	width: 80%;
	height: 80%;
}

/* -------- Section with div at the right ------ */
.section.right .text-holder {
	z-index: 3;
	top: 10%;
	right: 10%;
	width: 50%;
	height: auto;
}

.section.right h3 {
	z-index: 5;
	left: 50%;
	top: 0.3em;
	transform: translateX(-50%);
}

.section.right p {
	width: 100%;
	height: 100%;
	margin: 0;
}

.section.right .image-holder {
	left: 0;
	top: 20%;
	width: 80%;
	height: 80%;
}

/* -------- Section with image at front and div at left ------- */
.section.bleft .text-holder {
	z-index: 3;
	top: 10%;
	right: 10%;
	width: 50%;
	height: auto;
}

.section.bleft h3 {
	z-index: 5;
	left: 50%;
	top: 0.3em;
	transform: translateX(-50%);
}

.section.bleft p {
	width: 100%;
	height: 100%;
	margin: 0;
}

.section.bleft .image-holder {
	left: 0;
	top: 20%;
	width: 80%;
	height: 80%;
}

/* -------- Section with image at front and div at right ------- */
.section.bright .text-holder {
	z-index: 3;
	top: 10%;
	right: 10%;
	width: 50%;
	height: auto;
}

.section.bright h3 {
	z-index: 5;
	left: 50%;
	top: 0.3em;
	transform: translateX(-50%);
}

.section.bright p {
	width: 100%;
	height: 100%;
	margin: 0;
}

.section.bright .image-holder {
	left: 0;
	top: 20%;
	width: 80%;
	height: 80%;
}


/* *************** KEY FRAMES ***************** */

@keyframes title {
	from {
		opacity: 0;
	}

	to {
		opacity: 1;
	}
}

@keyframes header {
	from {
		top: -10%;
	}

	to {
		top: 0;
	}
}

@keyframes section-left {
  0%{
  	transform: rotate(20deg);
  	margin-left: -45vw;
  }

  54%{
  	transform: rotate(20deg) ;
  	margin-left: calc(1.75em - 20px);
  }

  60% {
    transform:  rotate(0deg) ;
    margin-left: calc(1.75em);
  }
  68% {
    transform:  rotate(-15deg) ;
    margin-left: calc(1.75em + 15px);
  }
  76% {
    transform:  rotate(10deg) ;
    margin-left: calc(1.75em - 10px);
  }
  84% {
    transform:  rotate(-5deg);
    margin-left: calc(1.75em + 5px);
  }
  92% {
    transform:  rotate(5deg);
    margin-left: calc(1.75em - 5px);
  }
  100% {
    transform:  rotate(0deg) ;
    margin-left: calc(1.75em);
  }

}

@keyframes section-right {
  0%{
  	transform: rotate(-20deg);
  	margin-right: -45vw;
  }

  54%{
  	transform: rotate(-20deg) ;
  	margin-right: calc(1.75em - 20px);
  }

  60% {
    transform:  rotate(0deg) ;
    margin-right: calc(1.75em);
  }
  68% {
    transform:  rotate(15deg) ;
    margin-right: calc(1.75em + 15px);
  }
  76% {
    transform:  rotate(-10deg) ;
    margin-right: calc(1.75em - 10px);
  }
  84% {
    transform:  rotate(5deg);
    margin-right: calc(1.75em + 5px);
  }
  92% {
    transform:  rotate(-5deg);
    margin-right: calc(1.75em - 5px);
  }
  100% {
    transform:  rotate(0deg) ;
    margin-right: calc(1.75em);
  }

}

/* ------------ Checking for landscape mode to rotate gif ----------- */
@media only screen and (orientation: portrait) {
	.landing-page {
		background: url("../images/landing-page-rotated.gif");
		background-size: cover;
		background-repeat: no-repeat;
		background-position: center center;
		background-attachment: fixed;
	}
}

@media only screen and (orientation: landscape) {
	.landing-page {
		background: url("../images/landing-page.gif");
		background-size: cover;
		background-repeat: no-repeat;
		background-position: center center;
		background-attachment: fixed;
	}
}

/* ------------- Check screen resolution for smaller images ------------ */
@media screen and (max-width: 481px) {
	#drawing {background-image: url('../images/480p/drawing.jpg');}
	#test-guy {background-image: url('../images/480p/testing-guy.jpg');}
	#code {background-image: url('../images/480p/code.png');}
	#socket {background-image: url('../images/480p/socket.jpg');}
	#inside2 {background-image: url('../images/480p/inside2.jpg');}
}

@media screen and (min-width: 481px) and (max-width: 668px) {
	#drawing {background-image: url('../images/667p/drawing.jpg');}
	#test-guy {background-image: url('../images/667p/testing-guy.jpg');}
	#code {background-image: url('../images/667p/code.png');}
	#socket {background-image: url('../images/667p/socket.jpg');}
	#inside2 {background-image: url('../images/667	p/inside2.jpg');}
}

@media screen and (min-width: 668px) and (max-width: 769px) {
	#drawing {background-image: url('../images/768p/drawing.jpg');}
	#test-guy {background-image: url('../images/768p/testing-guy.jpg');}
	#code {background-image: url('../images/768p/code.png');}
	#socket {background-image: url('../images/768p/socket.jpg');}
	#inside2 {background-image: url('../images/768p/inside2.jpg');}
}

@media screen and (min-width: 769px) and (max-width: 1081px) {
	#drawing {background-image: url('../images/1080p/drawing.jpg');}
	#test-guy {background-image: url('../images/1080p/testing-guy.jpg');}
	#code {background-image: url('../images/1080p/code.png');}
	#socket {background-image: url('../images/1080p/socket.jpg');}
	#inside2 {background-image: url('../images/1080p/inside2.jpg');}
}

@media screen and (min-width: 1081px) {
	#drawing {background-image: url('../images/drawing.jpg');}
	#test-guy {background-image: url('../images/testing-guy.jpg');}
	#code {background-image: url('../images/code.png');}
	#socket {background-image: url('../images/socket.jpg');}
	#inside2 {background-image: url('../images/inside2.jpg');}
}

/* ---------- IOS ------------ */
@media screen and (max-device-width: 481px) {
	#drawing {background-image: url('../images/480p/drawing.jpg');}
	#test-guy {background-image: url('../images/480p/testing-guy.jpg');}
	#code {background-image: url('../images/480p/code.png');}
	#socket {background-image: url('../images/480p/socket.jpg');}
	#inside2 {background-image: url('../images/480p/inside2.jpg');}

	.section .image-holder {
	position: absolute;
	background-repeat: no-repeat;
	background-size: cover;
	background-position: center center;
	background-attachment: scroll;
	}
}

@media screen and (min-device-width: 481px) and (max-device-width: 668px) {
	#drawing {background-image: url('../images/667p/drawing.jpg');}
	#test-guy {background-image: url('../images/667p/testing-guy.jpg');}
	#code {background-image: url('../images/667p/code.png');}
	#socket {background-image: url('../images/667p/socket.jpg');}
	#inside2 {background-image: url('../images/667	p/inside2.jpg');}
}

@media screen and (min-device-width: 668px) and (max-device-width: 769px) {
	#drawing {background-image: url('../images/768p/drawing.jpg');}
	#test-guy {background-image: url('../images/768p/testing-guy.jpg');}
	#code {background-image: url('../images/768p/code.png');}
	#socket {background-image: url('../images/768p/socket.jpg');}
	#inside2 {background-image: url('../images/768p/inside2.jpg');}
}

@media screen and (min-device-width: 769px) and (max-device-width: 1081px) {
	#drawing {background-image: url('../images/1080p/drawing.jpg');}
	#test-guy {background-image: url('../images/1080p/testing-guy.jpg');}
	#code {background-image: url('../images/1080p/code.png');}
	#socket {background-image: url('../images/1080p/socket.jpg');}
	#inside2 {background-image: url('../images/1080p/inside2.jpg');}
}

@media screen and (min-device-width: 1081px) {
	#drawing {background-image: url('../images/drawing.jpg');}
	#test-guy {background-image: url('../images/testing-guy.jpg');}
	#code {background-image: url('../images/code.png');}
	#socket {background-image: url('../images/socket.jpg');}
	#inside2 {background-image: url('../images/inside2.jpg');}
}

